checked for unwated spaces on all, changed rec. state on all, started '95

--- a/Data/Monarchs_1996_cleanup.ipynb
+++ b/Data/Monarchs_1996_cleanup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,16 +22,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Arink\\Anaconda3\\lib\\site-packages\\pandas\\core\\generic.py:2712: UserWarning: The spaces in these column names will not be changed. In pandas versions < 0.14, spaces were converted to underscores.\n",
+      "  method=method,\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "'C:\\\\Users\\\\Arink\\\\Desktop\\\\github\\\\CodeLou\\\\Monarchs\\\\Data'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +117,7 @@
        "1  CREATE TABLE \"monarchs1996\" (\\n\"index\" INTEGER...  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +287,7 @@
        "10   10                    Miles     REAL        0       None   0"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +473,7 @@
        "[75 rows x 6 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +614,7 @@
        "[75 rows x 2 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -627,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -659,27 +667,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Sierra Chincua</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>El Rosario</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>El Rosario</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>La Herrada</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>El Rosario</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -709,7 +717,7 @@
        "    <tr>\n",
        "      <th>74</th>\n",
        "      <td>El Rosario</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -718,22 +726,22 @@
       ],
       "text/plain": [
        "       report_city Report State\n",
-       "0   Sierra Chincua         MICH\n",
-       "1       El Rosario         MICH\n",
-       "2       El Rosario         MICH\n",
-       "3       La Herrada         MICH\n",
-       "4       El Rosario         MICH\n",
+       "0   Sierra Chincua    Michoacán\n",
+       "1       El Rosario    Michoacán\n",
+       "2       El Rosario    Michoacán\n",
+       "3       La Herrada    Michoacán\n",
+       "4       El Rosario    Michoacán\n",
        "..             ...          ...\n",
        "70   Oklahoma City           OK\n",
        "71          Topeka           KS\n",
        "72          Duluth           MN\n",
        "73          Dallas           TX\n",
-       "74      El Rosario         MICH\n",
+       "74      El Rosario    Michoacán\n",
        "\n",
        "[75 rows x 2 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -743,7 +751,7 @@
     "df3 = df['Where Recovered'].str.split(',', expand=True, n=1)\n",
     "df3.columns = ['report_city', 'Report State']\n",
     "df3['Report State'] = df3['Report State'].str.strip()\n",
-    "df3.loc[df3['Report State'] == 'Mexico', 'Report State'] = 'MICH'\n",
+    "df3.loc[df3['Report State'] == 'Mexico', 'Report State'] = 'Michoacán'\n",
     "df3"
    ]
   },
@@ -756,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +858,7 @@
        "[75 rows x 1 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -872,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -911,7 +919,7 @@
        "      <td>IV 301</td>\n",
        "      <td>MN</td>\n",
        "      <td>09/04/96</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MEXICO</td>\n",
        "      <td>03/04/97</td>\n",
        "      <td>1760.0</td>\n",
@@ -921,7 +929,7 @@
        "      <td>MC 648</td>\n",
        "      <td>IL</td>\n",
        "      <td>09/30/96</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MEXICO</td>\n",
        "      <td>Feb. 97</td>\n",
        "      <td>1660.0</td>\n",
@@ -931,7 +939,7 @@
        "      <td>EB 370</td>\n",
        "      <td>KS</td>\n",
        "      <td>09/18/96</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MEXICO</td>\n",
        "      <td>Feb. 97</td>\n",
        "      <td>1375.0</td>\n",
@@ -941,7 +949,7 @@
        "      <td>MK 276</td>\n",
        "      <td>KS</td>\n",
        "      <td>09/14/96</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MEXICO</td>\n",
        "      <td>Feb. 97</td>\n",
        "      <td>1375.0</td>\n",
@@ -951,7 +959,7 @@
        "      <td>KN 176</td>\n",
        "      <td>KS</td>\n",
        "      <td>09/12/96</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MEXICO</td>\n",
        "      <td>03/10/97</td>\n",
        "      <td>1375.0</td>\n",
@@ -1011,7 +1019,7 @@
        "      <td>015 MH</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MEXICO</td>\n",
        "      <td>Feb. 96</td>\n",
        "      <td>NaN</td>\n",
@@ -1023,22 +1031,22 @@
       ],
       "text/plain": [
        "   Tag No. Tag State  Tag Date Report State Report Country Report Date   Miles\n",
-       "0   IV 301        MN  09/04/96         MICH         MEXICO    03/04/97  1760.0\n",
-       "1   MC 648        IL  09/30/96         MICH         MEXICO     Feb. 97  1660.0\n",
-       "2   EB 370        KS  09/18/96         MICH         MEXICO     Feb. 97  1375.0\n",
-       "3   MK 276        KS  09/14/96         MICH         MEXICO     Feb. 97  1375.0\n",
-       "4   KN 176        KS  09/12/96         MICH         MEXICO    03/10/97  1375.0\n",
+       "0   IV 301        MN  09/04/96    Michoacán         MEXICO    03/04/97  1760.0\n",
+       "1   MC 648        IL  09/30/96    Michoacán         MEXICO     Feb. 97  1660.0\n",
+       "2   EB 370        KS  09/18/96    Michoacán         MEXICO     Feb. 97  1375.0\n",
+       "3   MK 276        KS  09/14/96    Michoacán         MEXICO     Feb. 97  1375.0\n",
+       "4   KN 176        KS  09/12/96    Michoacán         MEXICO    03/10/97  1375.0\n",
        "..     ...       ...       ...          ...            ...         ...     ...\n",
        "70  HY 802        OK  09/30/96           OK            USA    10/01/96     2.0\n",
        "71  DP 521        KS  10/12/96           KS            USA    10/13/96     2.0\n",
        "72  DX 480        MN  10/12/96           MN            USA    10/12/96     1.0\n",
        "73  CT 641        TX  09/24/96           TX            USA    09/24/96     1.0\n",
-       "74  015 MH       NaN       NaN         MICH         MEXICO     Feb. 96     NaN\n",
+       "74  015 MH       NaN       NaN    Michoacán         MEXICO     Feb. 96     NaN\n",
        "\n",
        "[75 rows x 7 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1048,7 +1056,22 @@
     "df4.drop(['Where Tagged', 'Where Recovered', 'report_city', 'tag_city'], axis=1, inplace=True)\n",
     "df5 = df4[['Tag No.','Tag State', 'Tag Date', 'Report State', 'Report Country', 'Report Date', 'Miles']]\n",
     "new_table = df5.copy()\n",
-    "new_table\n",
+    "new_table"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Final check for unwanted spaces"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# new_table.loc[new_table['Report State'].str.contains(r'\\s', na=False), 'Report State'].value_counts()\n",
     "# new_table.loc[new_table['Tag State'].str.contains(r'\\s', na=False), 'Tag State'].value_counts()\n",
     "# new_table.loc[new_table['Tag No.'].str.contains(r'\\s', na=False), 'Tag No.'].value_counts()\n",
@@ -1064,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1080,7 +1103,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1093,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1109,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
