--- a/Data/Monarchs_1997_cleanup.ipynb
+++ b/Data/Monarchs_1997_cleanup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
        "'C:\\\\Users\\\\Arink\\\\Desktop\\\\github\\\\CodeLou\\\\Monarchs\\\\Data'"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
        "1  CREATE TABLE \"monarchs1997\" (\\n\"index\" INTEGER...  "
       ]
      },
-     "execution_count": 113,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
        "10   10            Est. Distance     REAL        0       None   0"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +465,7 @@
        "[103 rows x 6 columns]"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +606,7 @@
        "[103 rows x 2 columns]"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -661,27 +661,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>El Rosario</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>El Rosario</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>El Rosario</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>El Rosario</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>El Rosario</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -711,7 +711,7 @@
        "    <tr>\n",
        "      <th>102</th>\n",
        "      <td>El Rosario</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -720,22 +720,22 @@
       ],
       "text/plain": [
        "         report_city Report State\n",
-       "0         El Rosario         MICH\n",
-       "1         El Rosario         MICH\n",
-       "2         El Rosario         MICH\n",
-       "3         El Rosario         MICH\n",
-       "4         El Rosario         MICH\n",
+       "0         El Rosario    Michoacán\n",
+       "1         El Rosario    Michoacán\n",
+       "2         El Rosario    Michoacán\n",
+       "3         El Rosario    Michoacán\n",
+       "4         El Rosario    Michoacán\n",
        "..               ...          ...\n",
        "98              Ames           IA\n",
        "99          Comstock           TX\n",
        "100  Pensacola Beach           FL\n",
        "101         Victoria           TX\n",
-       "102       El Rosario         MICH\n",
+       "102       El Rosario    Michoacán\n",
        "\n",
        "[103 rows x 2 columns]"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -744,7 +744,7 @@
     "df3 = df['Where Recovered'].str.split(',', expand=True)\n",
     "df3.columns = ['report_city', 'Report State']\n",
     "df3['Report State'] = df3['Report State'].str.strip()\n",
-    "df3.loc[df3['Report State'] == 'Mexico', 'Report State'] = 'MICH'\n",
+    "df3.loc[df3['Report State'] == 'Mexico', 'Report State'] = 'Michoacán'\n",
     "df3"
    ]
   },
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -851,7 +851,7 @@
        "[103 rows x 1 columns]"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -873,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -887,12 +887,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Final check to make sure there are no unwanted spaces"
+    "### Final check for unwanted spaces"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -911,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -927,7 +927,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -940,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -956,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
