--- a/Data/Monarchs_1998_cleanup.ipynb
+++ b/Data/Monarchs_1998_cleanup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
        "'C:\\\\Users\\\\Arink\\\\Desktop\\\\github\\\\CodeLou\\\\Monarchs\\\\Data'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
        "1  CREATE TABLE \"monarchs1998\" (\\n\"index\" INTEGER...  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
        "8    8               Miles     TEXT        0       None   0"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +432,7 @@
        "[459 rows x 6 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +573,7 @@
        "[459 rows x 2 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,6 +581,8 @@
    "source": [
     "df2 = df['Tag City, State'].str.split(', ', expand=True)\n",
     "df2.columns = ['tag_city', 'Tag State']\n",
+    "df2.loc[df2['Tag State'] == 'NL (MX)', 'Tag State'] = 'Nuevo Leon'\n",
+    "df2.loc[df2['Tag State'] == 'COAH (MX)', 'Tag State'] = 'Coahuila'\n",
     "df2"
    ]
   },
@@ -593,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -630,22 +632,22 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>El Rosario</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>El Rosario</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>El Rosario</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Angangueo</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -655,27 +657,27 @@
        "    <tr>\n",
        "      <th>454</th>\n",
        "      <td>El Rosario</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>455</th>\n",
        "      <td>El Rosario</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>456</th>\n",
        "      <td>El Rosario</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>457</th>\n",
        "      <td>El Rosario</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>458</th>\n",
        "      <td>Angangueo</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -685,21 +687,21 @@
       "text/plain": [
        "      report_city Report State\n",
        "0    Rancho Viejo           TX\n",
-       "1      El Rosario         MICH\n",
-       "2      El Rosario         MICH\n",
-       "3      El Rosario         MICH\n",
-       "4       Angangueo         MICH\n",
+       "1      El Rosario    Michoacán\n",
+       "2      El Rosario    Michoacán\n",
+       "3      El Rosario    Michoacán\n",
+       "4       Angangueo    Michoacán\n",
        "..            ...          ...\n",
-       "454    El Rosario         MICH\n",
-       "455    El Rosario         MICH\n",
-       "456    El Rosario         MICH\n",
-       "457    El Rosario         MICH\n",
-       "458     Angangueo         MICH\n",
+       "454    El Rosario    Michoacán\n",
+       "455    El Rosario    Michoacán\n",
+       "456    El Rosario    Michoacán\n",
+       "457    El Rosario    Michoacán\n",
+       "458     Angangueo    Michoacán\n",
        "\n",
        "[459 rows x 2 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,7 +709,7 @@
    "source": [
     "df3 = df['Report City, State'].str.split(', ', expand=True)\n",
     "df3.columns = ['report_city', 'Report State']\n",
-    "df3.loc[df3['Report State'] == 'MX', 'Report State'] = 'MICH'\n",
+    "df3.loc[df3['Report State'] == 'MX', 'Report State'] = 'Michoacán'\n",
     "df3"
    ]
   },
@@ -720,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -814,7 +816,7 @@
        "[459 rows x 1 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -836,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -885,7 +887,7 @@
        "      <td>WJ990</td>\n",
        "      <td>CT</td>\n",
        "      <td>08/29/98</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MEXICO</td>\n",
        "      <td>03/01/99</td>\n",
        "      <td>2231</td>\n",
@@ -895,7 +897,7 @@
        "      <td>BG365</td>\n",
        "      <td>CT</td>\n",
        "      <td>09/03/98</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MEXICO</td>\n",
        "      <td>02/10/99</td>\n",
        "      <td>2199</td>\n",
@@ -905,7 +907,7 @@
        "      <td>WK478</td>\n",
        "      <td>CT</td>\n",
        "      <td>09/21/98</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MEXICO</td>\n",
        "      <td>02/17/99</td>\n",
        "      <td>2186</td>\n",
@@ -915,7 +917,7 @@
        "      <td>WK499</td>\n",
        "      <td>CT</td>\n",
        "      <td>09/26/98</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MEXICO</td>\n",
        "      <td>04/05/99</td>\n",
        "      <td>2186</td>\n",
@@ -935,7 +937,7 @@
        "      <td>DA348</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MEXICO</td>\n",
        "      <td>03/01/99</td>\n",
        "      <td>NaN</td>\n",
@@ -945,7 +947,7 @@
        "      <td>DA382</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MEXICO</td>\n",
        "      <td>03/01/99</td>\n",
        "      <td>NaN</td>\n",
@@ -955,7 +957,7 @@
        "      <td>NK076</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MEXICO</td>\n",
        "      <td>02/10/99</td>\n",
        "      <td>NaN</td>\n",
@@ -965,7 +967,7 @@
        "      <td>SK300</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MEXICO</td>\n",
        "      <td>02/19/99</td>\n",
        "      <td>NaN</td>\n",
@@ -975,7 +977,7 @@
        "      <td>CB963</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MEXICO</td>\n",
        "      <td>04/05/99</td>\n",
        "      <td>NaN</td>\n",
@@ -988,21 +990,21 @@
       "text/plain": [
        "    Tag No. Tag State  Tag Date Report State Report Country Report Date Miles\n",
        "0     XA226        WI  09/25/98           TX            USA    04/06/99  1814\n",
-       "1     WJ990        CT  08/29/98         MICH         MEXICO    03/01/99  2231\n",
-       "2     BG365        CT  09/03/98         MICH         MEXICO    02/10/99  2199\n",
-       "3     WK478        CT  09/21/98         MICH         MEXICO    02/17/99  2186\n",
-       "4     WK499        CT  09/26/98         MICH         MEXICO    04/05/99  2186\n",
+       "1     WJ990        CT  08/29/98    Michoacán         MEXICO    03/01/99  2231\n",
+       "2     BG365        CT  09/03/98    Michoacán         MEXICO    02/10/99  2199\n",
+       "3     WK478        CT  09/21/98    Michoacán         MEXICO    02/17/99  2186\n",
+       "4     WK499        CT  09/26/98    Michoacán         MEXICO    04/05/99  2186\n",
        "..      ...       ...       ...          ...            ...         ...   ...\n",
-       "454   DA348       NaN       NaN         MICH         MEXICO    03/01/99   NaN\n",
-       "455   DA382       NaN       NaN         MICH         MEXICO    03/01/99   NaN\n",
-       "456   NK076       NaN       NaN         MICH         MEXICO    02/10/99   NaN\n",
-       "457   SK300       NaN       NaN         MICH         MEXICO    02/19/99   NaN\n",
-       "458   CB963       NaN       NaN         MICH         MEXICO    04/05/99   NaN\n",
+       "454   DA348       NaN       NaN    Michoacán         MEXICO    03/01/99   NaN\n",
+       "455   DA382       NaN       NaN    Michoacán         MEXICO    03/01/99   NaN\n",
+       "456   NK076       NaN       NaN    Michoacán         MEXICO    02/10/99   NaN\n",
+       "457   SK300       NaN       NaN    Michoacán         MEXICO    02/19/99   NaN\n",
+       "458   CB963       NaN       NaN    Michoacán         MEXICO    04/05/99   NaN\n",
        "\n",
        "[459 rows x 7 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1025,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1074,7 +1076,7 @@
        "      <td>WJ990</td>\n",
        "      <td>CT</td>\n",
        "      <td>08/29/98</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MEXICO</td>\n",
        "      <td>03/01/99</td>\n",
        "      <td>2231</td>\n",
@@ -1084,7 +1086,7 @@
        "      <td>BG365</td>\n",
        "      <td>CT</td>\n",
        "      <td>09/03/98</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MEXICO</td>\n",
        "      <td>02/10/99</td>\n",
        "      <td>2199</td>\n",
@@ -1094,7 +1096,7 @@
        "      <td>WK478</td>\n",
        "      <td>CT</td>\n",
        "      <td>09/21/98</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MEXICO</td>\n",
        "      <td>02/17/99</td>\n",
        "      <td>2186</td>\n",
@@ -1104,7 +1106,7 @@
        "      <td>WK499</td>\n",
        "      <td>CT</td>\n",
        "      <td>09/26/98</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MEXICO</td>\n",
        "      <td>04/05/99</td>\n",
        "      <td>2186</td>\n",
@@ -1124,7 +1126,7 @@
        "      <td>DA348</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MEXICO</td>\n",
        "      <td>03/01/99</td>\n",
        "      <td>NaN</td>\n",
@@ -1134,7 +1136,7 @@
        "      <td>DA382</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MEXICO</td>\n",
        "      <td>03/01/99</td>\n",
        "      <td>NaN</td>\n",
@@ -1144,7 +1146,7 @@
        "      <td>NK076</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MEXICO</td>\n",
        "      <td>02/10/99</td>\n",
        "      <td>NaN</td>\n",
@@ -1154,7 +1156,7 @@
        "      <td>SK300</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MEXICO</td>\n",
        "      <td>02/19/99</td>\n",
        "      <td>NaN</td>\n",
@@ -1164,7 +1166,7 @@
        "      <td>CB963</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MEXICO</td>\n",
        "      <td>04/05/99</td>\n",
        "      <td>NaN</td>\n",
@@ -1177,21 +1179,21 @@
       "text/plain": [
        "    Tag No. Tag State  Tag Date Report State Report Country Report Date Miles\n",
        "0     XA226        WI  09/25/98           TX            USA    04/06/99  1814\n",
-       "1     WJ990        CT  08/29/98         MICH         MEXICO    03/01/99  2231\n",
-       "2     BG365        CT  09/03/98         MICH         MEXICO    02/10/99  2199\n",
-       "3     WK478        CT  09/21/98         MICH         MEXICO    02/17/99  2186\n",
-       "4     WK499        CT  09/26/98         MICH         MEXICO    04/05/99  2186\n",
+       "1     WJ990        CT  08/29/98    Michoacán         MEXICO    03/01/99  2231\n",
+       "2     BG365        CT  09/03/98    Michoacán         MEXICO    02/10/99  2199\n",
+       "3     WK478        CT  09/21/98    Michoacán         MEXICO    02/17/99  2186\n",
+       "4     WK499        CT  09/26/98    Michoacán         MEXICO    04/05/99  2186\n",
        "..      ...       ...       ...          ...            ...         ...   ...\n",
-       "454   DA348       NaN       NaN         MICH         MEXICO    03/01/99   NaN\n",
-       "455   DA382       NaN       NaN         MICH         MEXICO    03/01/99   NaN\n",
-       "456   NK076       NaN       NaN         MICH         MEXICO    02/10/99   NaN\n",
-       "457   SK300       NaN       NaN         MICH         MEXICO    02/19/99   NaN\n",
-       "458   CB963       NaN       NaN         MICH         MEXICO    04/05/99   NaN\n",
+       "454   DA348       NaN       NaN    Michoacán         MEXICO    03/01/99   NaN\n",
+       "455   DA382       NaN       NaN    Michoacán         MEXICO    03/01/99   NaN\n",
+       "456   NK076       NaN       NaN    Michoacán         MEXICO    02/10/99   NaN\n",
+       "457   SK300       NaN       NaN    Michoacán         MEXICO    02/19/99   NaN\n",
+       "458   CB963       NaN       NaN    Michoacán         MEXICO    04/05/99   NaN\n",
        "\n",
        "[459 rows x 7 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1205,12 +1207,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Final check for unwanted spaces"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# new_table.loc[new_table['Report State'].str.contains(r'\\s', na=False), 'Report State'].value_counts()\n",
+    "# new_table.loc[new_table['Tag State'].str.contains(r'\\s', na=False), 'Tag State'].value_counts()\n",
+    "# new_table.loc[new_table['Tag No.'].str.contains(r'\\s', na=False), 'Tag No.'].value_counts()\n",
+    "# new_table.loc[new_table['Report Country'].str.contains(r'\\s', na=False), 'Report Country'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Convert date columns to DateTime datatypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1226,7 +1247,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1239,7 +1260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1255,7 +1276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
