--- a/Data/Monarchs_2000_cleanup.ipynb
+++ b/Data/Monarchs_2000_cleanup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,24 +22,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Arink\\Anaconda3\\lib\\site-packages\\pandas\\core\\generic.py:2712: UserWarning: The spaces in these column names will not be changed. In pandas versions < 0.14, spaces were converted to underscores.\n",
-      "  method=method,\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "'C:\\\\Users\\\\Arink\\\\Desktop\\\\github\\\\CodeLou\\\\Monarchs\\\\Data'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +110,7 @@
        "1  CREATE TABLE \"monarchs2000\" (\\n\"index\" INTEGER...  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +260,7 @@
        "8    8            Miles     REAL        0       None   0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +446,7 @@
        "[295 rows x 6 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +571,7 @@
        "[295 rows x 2 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -599,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -632,19 +624,19 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>El Rosario</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MX</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>El Rosario</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MX</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>El Rosario</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MX</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -656,7 +648,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>El Rosario</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MX</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -674,25 +666,25 @@
        "    <tr>\n",
        "      <th>291</th>\n",
        "      <td>El Rosario</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MX</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>292</th>\n",
        "      <td>El Rosario</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MX</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>293</th>\n",
        "      <td>El Rosario</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MX</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>294</th>\n",
        "      <td>El Rosario</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MX</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -702,22 +694,22 @@
       ],
       "text/plain": [
        "     report_city Report State Report Country\n",
-       "0     El Rosario         MICH             MX\n",
-       "1     El Rosario         MICH             MX\n",
-       "2     El Rosario         MICH             MX\n",
+       "0     El Rosario    Michoacán             MX\n",
+       "1     El Rosario    Michoacán             MX\n",
+       "2     El Rosario    Michoacán             MX\n",
        "3    Cerro Pelon       MEXICO             MX\n",
-       "4     El Rosario         MICH             MX\n",
+       "4     El Rosario    Michoacán             MX\n",
        "..           ...          ...            ...\n",
        "290    Dyersburg           TN           None\n",
-       "291   El Rosario         MICH             MX\n",
-       "292   El Rosario         MICH             MX\n",
-       "293   El Rosario         MICH             MX\n",
-       "294   El Rosario         MICH             MX\n",
+       "291   El Rosario    Michoacán             MX\n",
+       "292   El Rosario    Michoacán             MX\n",
+       "293   El Rosario    Michoacán             MX\n",
+       "294   El Rosario    Michoacán             MX\n",
        "\n",
        "[295 rows x 3 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -726,7 +718,8 @@
     "df3 = df['Report Location'].str.split(', ', expand=True)\n",
     "df3.columns = ['report_city', 'Report State', 'Report Country']\n",
     "#add_usa = df3['Report Country'].fillna('USA') decided to use .loc\n",
-    "df3\n"
+    "df3.loc[df3['Report State'] == 'MICH', 'Report State'] = 'Michoacán'\n",
+    "df3"
    ]
   },
   {
@@ -738,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +770,7 @@
        "      <td>613PZ</td>\n",
        "      <td>CT</td>\n",
        "      <td>09/24/00</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MX</td>\n",
        "      <td>01/26/01</td>\n",
        "      <td>2222.0</td>\n",
@@ -787,7 +780,7 @@
        "      <td>486KF</td>\n",
        "      <td>ONT</td>\n",
        "      <td>09/12/99</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MX</td>\n",
        "      <td>01/07/01</td>\n",
        "      <td>2090.0</td>\n",
@@ -797,7 +790,7 @@
        "      <td>067GA</td>\n",
        "      <td>MI</td>\n",
        "      <td>08/20/00</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MX</td>\n",
        "      <td>01/07/01</td>\n",
        "      <td>1995.0</td>\n",
@@ -817,7 +810,7 @@
        "      <td>017MS</td>\n",
        "      <td>PA</td>\n",
        "      <td>09/01/99</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MX</td>\n",
        "      <td>12/01/00</td>\n",
        "      <td>1927.0</td>\n",
@@ -847,7 +840,7 @@
        "      <td>260PG</td>\n",
        "      <td>MN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MX</td>\n",
        "      <td>02/01/01</td>\n",
        "      <td>NaN</td>\n",
@@ -857,7 +850,7 @@
        "      <td>175PG</td>\n",
        "      <td>MN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MX</td>\n",
        "      <td>02/28/01</td>\n",
        "      <td>NaN</td>\n",
@@ -867,7 +860,7 @@
        "      <td>295PG</td>\n",
        "      <td>MN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MX</td>\n",
        "      <td>01/26/01</td>\n",
        "      <td>NaN</td>\n",
@@ -877,7 +870,7 @@
        "      <td>438JW</td>\n",
        "      <td>MN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MX</td>\n",
        "      <td>01/07/01</td>\n",
        "      <td>NaN</td>\n",
@@ -889,17 +882,17 @@
       ],
       "text/plain": [
        "    Tag No. Tag State  Tag Date Report State Report Country Report Date  \\\n",
-       "0     613PZ        CT  09/24/00         MICH             MX    01/26/01   \n",
-       "1     486KF       ONT  09/12/99         MICH             MX    01/07/01   \n",
-       "2     067GA        MI  08/20/00         MICH             MX    01/07/01   \n",
+       "0     613PZ        CT  09/24/00    Michoacán             MX    01/26/01   \n",
+       "1     486KF       ONT  09/12/99    Michoacán             MX    01/07/01   \n",
+       "2     067GA        MI  08/20/00    Michoacán             MX    01/07/01   \n",
        "3     154JR        VA  09/25/99       MEXICO             MX    03/09/01   \n",
-       "4     017MS        PA  09/01/99         MICH             MX    12/01/00   \n",
+       "4     017MS        PA  09/01/99    Michoacán             MX    12/01/00   \n",
        "..      ...       ...       ...          ...            ...         ...   \n",
        "290   611PF        MN       NaN           TN           None         NaN   \n",
-       "291   260PG        MN       NaN         MICH             MX    02/01/01   \n",
-       "292   175PG        MN       NaN         MICH             MX    02/28/01   \n",
-       "293   295PG        MN       NaN         MICH             MX    01/26/01   \n",
-       "294   438JW        MN       NaN         MICH             MX    01/07/01   \n",
+       "291   260PG        MN       NaN    Michoacán             MX    02/01/01   \n",
+       "292   175PG        MN       NaN    Michoacán             MX    02/28/01   \n",
+       "293   295PG        MN       NaN    Michoacán             MX    01/26/01   \n",
+       "294   438JW        MN       NaN    Michoacán             MX    01/07/01   \n",
        "\n",
        "      Miles  \n",
        "0    2222.0  \n",
@@ -917,7 +910,7 @@
        "[295 rows x 7 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -939,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -978,7 +971,7 @@
        "      <td>613PZ</td>\n",
        "      <td>CT</td>\n",
        "      <td>09/24/00</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MEXICO</td>\n",
        "      <td>01/26/01</td>\n",
        "      <td>2222.0</td>\n",
@@ -988,7 +981,7 @@
        "      <td>486KF</td>\n",
        "      <td>ONT</td>\n",
        "      <td>09/12/99</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MEXICO</td>\n",
        "      <td>01/07/01</td>\n",
        "      <td>2090.0</td>\n",
@@ -998,7 +991,7 @@
        "      <td>067GA</td>\n",
        "      <td>MI</td>\n",
        "      <td>08/20/00</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MEXICO</td>\n",
        "      <td>01/07/01</td>\n",
        "      <td>1995.0</td>\n",
@@ -1018,7 +1011,7 @@
        "      <td>017MS</td>\n",
        "      <td>PA</td>\n",
        "      <td>09/01/99</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MEXICO</td>\n",
        "      <td>12/01/00</td>\n",
        "      <td>1927.0</td>\n",
@@ -1048,7 +1041,7 @@
        "      <td>260PG</td>\n",
        "      <td>MN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MEXICO</td>\n",
        "      <td>02/01/01</td>\n",
        "      <td>NaN</td>\n",
@@ -1058,7 +1051,7 @@
        "      <td>175PG</td>\n",
        "      <td>MN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MEXICO</td>\n",
        "      <td>02/28/01</td>\n",
        "      <td>NaN</td>\n",
@@ -1068,7 +1061,7 @@
        "      <td>295PG</td>\n",
        "      <td>MN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MEXICO</td>\n",
        "      <td>01/26/01</td>\n",
        "      <td>NaN</td>\n",
@@ -1078,7 +1071,7 @@
        "      <td>438JW</td>\n",
        "      <td>MN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MEXICO</td>\n",
        "      <td>01/07/01</td>\n",
        "      <td>NaN</td>\n",
@@ -1090,17 +1083,17 @@
       ],
       "text/plain": [
        "    Tag No. Tag State  Tag Date Report State Report Country Report Date  \\\n",
-       "0     613PZ        CT  09/24/00         MICH         MEXICO    01/26/01   \n",
-       "1     486KF       ONT  09/12/99         MICH         MEXICO    01/07/01   \n",
-       "2     067GA        MI  08/20/00         MICH         MEXICO    01/07/01   \n",
+       "0     613PZ        CT  09/24/00    Michoacán         MEXICO    01/26/01   \n",
+       "1     486KF       ONT  09/12/99    Michoacán         MEXICO    01/07/01   \n",
+       "2     067GA        MI  08/20/00    Michoacán         MEXICO    01/07/01   \n",
        "3     154JR        VA  09/25/99       MEXICO         MEXICO    03/09/01   \n",
-       "4     017MS        PA  09/01/99         MICH         MEXICO    12/01/00   \n",
+       "4     017MS        PA  09/01/99    Michoacán         MEXICO    12/01/00   \n",
        "..      ...       ...       ...          ...            ...         ...   \n",
        "290   611PF        MN       NaN           TN            USA         NaN   \n",
-       "291   260PG        MN       NaN         MICH         MEXICO    02/01/01   \n",
-       "292   175PG        MN       NaN         MICH         MEXICO    02/28/01   \n",
-       "293   295PG        MN       NaN         MICH         MEXICO    01/26/01   \n",
-       "294   438JW        MN       NaN         MICH         MEXICO    01/07/01   \n",
+       "291   260PG        MN       NaN    Michoacán         MEXICO    02/01/01   \n",
+       "292   175PG        MN       NaN    Michoacán         MEXICO    02/28/01   \n",
+       "293   295PG        MN       NaN    Michoacán         MEXICO    01/26/01   \n",
+       "294   438JW        MN       NaN    Michoacán         MEXICO    01/07/01   \n",
        "\n",
        "      Miles  \n",
        "0    2222.0  \n",
@@ -1118,7 +1111,7 @@
        "[295 rows x 7 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1133,12 +1126,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Final check for unwanted spaces"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# new_table.loc[new_table['Report State'].str.contains(r'\\s', na=False), 'Report State'].value_counts()\n",
+    "# new_table.loc[new_table['Tag State'].str.contains(r'\\s', na=False), 'Tag State'].value_counts()\n",
+    "# new_table.loc[new_table['Tag No.'].str.contains(r'\\s', na=False), 'Tag No.'].value_counts()\n",
+    "# new_table.loc[new_table['Report Country'].str.contains(r'\\s', na=False), 'Report Country'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "###  Convert date columns to DateTime datatypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1154,7 +1166,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1167,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1183,7 +1195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
