--- a/Data/Monarchs_2001_cleanup.ipynb
+++ b/Data/Monarchs_2001_cleanup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,24 +22,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Arink\\Anaconda3\\lib\\site-packages\\pandas\\core\\generic.py:2712: UserWarning: The spaces in these column names will not be changed. In pandas versions < 0.14, spaces were converted to underscores.\n",
-      "  method=method,\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "'C:\\\\Users\\\\Arink\\\\Desktop\\\\github\\\\CodeLou\\\\Monarchs\\\\Data'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +109,7 @@
        "1  CREATE TABLE \"monarchs2001\" (\\n\"index\" INTEGER...  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +239,7 @@
        "6    6                  Miles     REAL        0       None   0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +401,7 @@
        "[1962 rows x 4 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +563,7 @@
        "[1962 rows x 4 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +688,7 @@
        "[1962 rows x 2 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -718,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,6 +718,7 @@
     "df5 = df4[0].str.extract('(\\d\\d-\\d\\d-\\d\\d)', expand=True)\n",
     "#df6 = df4[0].str.replace('(\\d\\d-\\d\\d-\\d\\d)', '')- to seperate date from city. decided not to use city\n",
     "df4.columns = ['city_date', 'Report State', 'Report Country']\n",
+    "df4.loc[df4['Report State'] == 'MICH', 'Report State'] = 'Michoacán'\n",
     "df5.columns = ['Report Date']"
    ]
   },
@@ -738,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -757,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -796,7 +789,7 @@
        "      <td>AAD929</td>\n",
        "      <td>MA</td>\n",
        "      <td>09-12-01</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MEXICO</td>\n",
        "      <td>02-11-02</td>\n",
        "      <td>2344.0</td>\n",
@@ -806,7 +799,7 @@
        "      <td>AAD844</td>\n",
        "      <td>MA</td>\n",
        "      <td>09-12-01</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MEXICO</td>\n",
        "      <td>03-08-02</td>\n",
        "      <td>2343.0</td>\n",
@@ -816,7 +809,7 @@
        "      <td>AIO261</td>\n",
        "      <td>NY</td>\n",
        "      <td>09-24-01</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MEXICO</td>\n",
        "      <td>03-13-02</td>\n",
        "      <td>2329.0</td>\n",
@@ -826,7 +819,7 @@
        "      <td>AAU820</td>\n",
        "      <td>NY</td>\n",
        "      <td>08-29-01</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MEXICO</td>\n",
        "      <td>02-27-02</td>\n",
        "      <td>2315.0</td>\n",
@@ -836,7 +829,7 @@
        "      <td>ABG581</td>\n",
        "      <td>NY</td>\n",
        "      <td>09-16-01</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MEXICO</td>\n",
        "      <td>03-13-02</td>\n",
        "      <td>2303.0</td>\n",
@@ -866,7 +859,7 @@
        "      <td>ABW153</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MEXICO</td>\n",
        "      <td>03-08-02</td>\n",
        "      <td>NaN</td>\n",
@@ -876,7 +869,7 @@
        "      <td>AJA875</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MEXICO</td>\n",
        "      <td>02-26-02</td>\n",
        "      <td>NaN</td>\n",
@@ -886,7 +879,7 @@
        "      <td>ADR234</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>MICH</td>\n",
+       "      <td>Michoacán</td>\n",
        "      <td>MEXICO</td>\n",
        "      <td>02-26-02</td>\n",
        "      <td>NaN</td>\n",
@@ -908,16 +901,16 @@
       ],
       "text/plain": [
        "     Tag No. Tag State  Tag Date Report State Report Country Report Date  \\\n",
-       "0     AAD929        MA  09-12-01         MICH         MEXICO    02-11-02   \n",
-       "1     AAD844        MA  09-12-01         MICH         MEXICO    03-08-02   \n",
-       "2     AIO261        NY  09-24-01         MICH         MEXICO    03-13-02   \n",
-       "3     AAU820        NY  08-29-01         MICH         MEXICO    02-27-02   \n",
-       "4     ABG581        NY  09-16-01         MICH         MEXICO    03-13-02   \n",
+       "0     AAD929        MA  09-12-01    Michoacán         MEXICO    02-11-02   \n",
+       "1     AAD844        MA  09-12-01    Michoacán         MEXICO    03-08-02   \n",
+       "2     AIO261        NY  09-24-01    Michoacán         MEXICO    03-13-02   \n",
+       "3     AAU820        NY  08-29-01    Michoacán         MEXICO    02-27-02   \n",
+       "4     ABG581        NY  09-16-01    Michoacán         MEXICO    03-13-02   \n",
        "...      ...       ...       ...          ...            ...         ...   \n",
        "1957  ADE225       NaN       NaN           MN            USA    10-06-01   \n",
-       "1958  ABW153       NaN       NaN         MICH         MEXICO    03-08-02   \n",
-       "1959  AJA875       NaN       NaN         MICH         MEXICO    02-26-02   \n",
-       "1960  ADR234       NaN       NaN         MICH         MEXICO    02-26-02   \n",
+       "1958  ABW153       NaN       NaN    Michoacán         MEXICO    03-08-02   \n",
+       "1959  AJA875       NaN       NaN    Michoacán         MEXICO    02-26-02   \n",
+       "1960  ADR234       NaN       NaN    Michoacán         MEXICO    02-26-02   \n",
        "1961  AAG669       NaN       NaN           CT            USA    09-16-01   \n",
        "\n",
        "       Miles  \n",
@@ -936,7 +929,7 @@
        "[1962 rows x 7 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -948,187 +941,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Final check for unwanted spaces"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# new_table.loc[new_table['Report State'].str.contains(r'\\s', na=False), 'Report State'].value_counts()\n",
+    "# new_table.loc[new_table['Tag State'].str.contains(r'\\s', na=False), 'Tag State'].value_counts()\n",
+    "# new_table.loc[new_table['Tag No.'].str.contains(r'\\s', na=False), 'Tag No.'].value_counts()\n",
+    "# new_table.loc[new_table['Report Country'].str.contains(r'\\s', na=False), 'Report Country'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Tag No.</th>\n",
-       "      <th>Tag State</th>\n",
-       "      <th>Tag Date</th>\n",
-       "      <th>Report State</th>\n",
-       "      <th>Report Country</th>\n",
-       "      <th>Report Date</th>\n",
-       "      <th>Miles</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>AAD929</td>\n",
-       "      <td>MA</td>\n",
-       "      <td>2001-09-12</td>\n",
-       "      <td>MICH</td>\n",
-       "      <td>MEXICO</td>\n",
-       "      <td>2002-02-11</td>\n",
-       "      <td>2344.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>AAD844</td>\n",
-       "      <td>MA</td>\n",
-       "      <td>2001-09-12</td>\n",
-       "      <td>MICH</td>\n",
-       "      <td>MEXICO</td>\n",
-       "      <td>2002-03-08</td>\n",
-       "      <td>2343.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>AIO261</td>\n",
-       "      <td>NY</td>\n",
-       "      <td>2001-09-24</td>\n",
-       "      <td>MICH</td>\n",
-       "      <td>MEXICO</td>\n",
-       "      <td>2002-03-13</td>\n",
-       "      <td>2329.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>AAU820</td>\n",
-       "      <td>NY</td>\n",
-       "      <td>2001-08-29</td>\n",
-       "      <td>MICH</td>\n",
-       "      <td>MEXICO</td>\n",
-       "      <td>2002-02-27</td>\n",
-       "      <td>2315.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>ABG581</td>\n",
-       "      <td>NY</td>\n",
-       "      <td>2001-09-16</td>\n",
-       "      <td>MICH</td>\n",
-       "      <td>MEXICO</td>\n",
-       "      <td>2002-03-13</td>\n",
-       "      <td>2303.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1957</th>\n",
-       "      <td>ADE225</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>MN</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>2001-10-06</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1958</th>\n",
-       "      <td>ABW153</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>MICH</td>\n",
-       "      <td>MEXICO</td>\n",
-       "      <td>2002-03-08</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1959</th>\n",
-       "      <td>AJA875</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>MICH</td>\n",
-       "      <td>MEXICO</td>\n",
-       "      <td>2002-02-26</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1960</th>\n",
-       "      <td>ADR234</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>MICH</td>\n",
-       "      <td>MEXICO</td>\n",
-       "      <td>2002-02-26</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1961</th>\n",
-       "      <td>AAG669</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>CT</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>2001-09-16</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1962 rows × 7 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "     Tag No. Tag State   Tag Date Report State Report Country Report Date  \\\n",
-       "0     AAD929        MA 2001-09-12         MICH         MEXICO  2002-02-11   \n",
-       "1     AAD844        MA 2001-09-12         MICH         MEXICO  2002-03-08   \n",
-       "2     AIO261        NY 2001-09-24         MICH         MEXICO  2002-03-13   \n",
-       "3     AAU820        NY 2001-08-29         MICH         MEXICO  2002-02-27   \n",
-       "4     ABG581        NY 2001-09-16         MICH         MEXICO  2002-03-13   \n",
-       "...      ...       ...        ...          ...            ...         ...   \n",
-       "1957  ADE225       NaN        NaT           MN            USA  2001-10-06   \n",
-       "1958  ABW153       NaN        NaT         MICH         MEXICO  2002-03-08   \n",
-       "1959  AJA875       NaN        NaT         MICH         MEXICO  2002-02-26   \n",
-       "1960  ADR234       NaN        NaT         MICH         MEXICO  2002-02-26   \n",
-       "1961  AAG669       NaN        NaT           CT            USA  2001-09-16   \n",
-       "\n",
-       "       Miles  \n",
-       "0     2344.0  \n",
-       "1     2343.0  \n",
-       "2     2329.0  \n",
-       "3     2315.0  \n",
-       "4     2303.0  \n",
-       "...      ...  \n",
-       "1957     NaN  \n",
-       "1958     NaN  \n",
-       "1959     NaN  \n",
-       "1960     NaN  \n",
-       "1961     NaN  \n",
-       "\n",
-       "[1962 rows x 7 columns]"
+       "Tag No.                   object\n",
+       "Tag State                 object\n",
+       "Tag Date          datetime64[ns]\n",
+       "Report State              object\n",
+       "Report Country            object\n",
+       "Report Date       datetime64[ns]\n",
+       "Miles                    float64\n",
+       "dtype: object"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1136,12 +985,12 @@
    "source": [
     "new_table[\"Tag Date\"]= pd.to_datetime(new_table[\"Tag Date\"]) \n",
     "new_table[\"Report Date\"]= pd.to_datetime(new_table[\"Report Date\"]) \n",
-    "new_table"
+    "new_table.dtypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1157,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
